--- a/artists/sara/bio.html
+++ b/artists/sara/bio.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Artists</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="sara.css">
-    <meta chartset="utf-8">
-      <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+    <title>Artists</title>
 </head>
     <body>
         <header>
   <b>Sara Shakeel</b>
 </header>
-    <nav>
+        <nav>
         <ul>
         <li><a href="../index.html">Home</a></li> 
         <li>Bio</li> 
         <li><a href="../sara/contact.html">Contact</a></li>
         <li><a href="../sara/images.html">Images</a></li>
         </ul>
+        </nav>
+        <main>
             <article>
+        <div>
+            <h1>Bio</h1>
     <p>Sara Shakeel is a conceptual collage artist who advocates for female empowerment with her #glitterstretchmarks movement. Sara photographs women's stretch marks and illuminates them with glitter. She has also become popular for superimposing various photos together. She failed her final year of dental school in 2016 before pursing a career in art.</p>
+        </div>
+            <div>
 <p>Bio Source:
 <a href="https://www.famousbirthdays.com/people/sara-shakeel.html">Famous Birthdays</a></p>
-            </article>
-        </nav>
+            </div>
+                </article>
+            </main>
     </body>
 </html>
